--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div id="notify-count">
           <p>3</p>
         </div>
-        <div id="notify-action">
+        <div class="align-right">
           <p>Mark all as read</p>
         </div>
       </div>
@@ -69,7 +69,7 @@
           <p><span class="name">Kimberly Smith</span> commented on your picture</p>
           <p class="duration">1 week ago</p>
         </div>
-        <img src="./assets/images/image-chess.webp" alt="Chess playing pic">
+        <img class="align-right" src="./assets/images/image-chess.webp" alt="Chess playing pic">
       </div>
       <div class="item">
         <img src="./assets/images/avatar-nathan-peterson.webp" alt="Nathan Peterson profile pic">
